# st-crcglot

./: .gitignore  CHANGELOG.md  LICENSE  README.md  crc_lib.py  pyproject.toml  streamlit_app.py  ui.py
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
scripts/: update_badges.py
src/: crc_lib.py  streamlit_app.py  ui.py
tests/: test_app.py  test_crc_lib.py
