[project]
name = "st-crcglot"
version = "0.2.0"
description = "Streamlit UI for crcglot — multi-language CRC code generator."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Tracking a crcglot feature branch while integrating detect() fixes
    # (uppercase hex, uppercase 0X leader, no-separator) that aren't on
    # main or PyPI yet.  Actual branch + commit pin live in
    # [tool.uv.sources] below; uv.lock pins the resolved commit so deploys
    # stay reproducible.  Switch back to a PyPI range once the next
    # release ships.
    "crcglot",
    "streamlit>=1.57.0",
    "upstash-redis>=1.4.0",
]

[tool.uv.sources]
crcglot = { git = "https://github.com/hucker/crcglot.git", rev = "bug/more-decode-cases" }
